# gde2-menus

./: NEWS  README  autogen.sh  configure.ac
.tx/: config
desktop-directories/: Makefile.am
layout/: Makefile.am  gde2-applications.menu  gde2-preferences-categories.menu  gde2-settings.menu
libmenu/: Makefile.am  desktop-entries.c  desktop-entries.h  gde2menu-tree.c  gde2menu-tree.h  libgde2-menu-uninstalled.pc.in  libgde2-menu.pc.in  menu-monitor.c  menu-monitor.h
po/: POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_CL.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  frp.po  fur.po  fy.po  ga.po  (+68 more)
python/: Makefile.am  gde2menu.c
util/: Makefile.am  gde2-menus-ls.py  test-menu-spec.c
